force-app/main/default/objects/Opportunity/fields/Estimated_Shipping_Cost__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Shipping_Cost__c</fullName>
    <label>Estimated Shipping Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>