force-app/main/default/objects/Opportunity/fields/Shipping_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Company_Name__c</fullName>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Company Name</label>
    <type>Text</type>
</CustomField>